deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nextcloud 
  namespace: default
  labels:
    app: nextcloud 
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nextcloud 
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud 
        image: nextcloud
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nextcloud-data 
          mountPath: /var/www/html/data
        - name: nextcloud-config
          mountPath: /var/www/html/config
        - name: nextcloud-apps
          mountPath: /var/www/html/custom_apps
        - name: nextcloud-html
          mountPath: /var/www/html
      - name: mariadb 
        image: mariadb
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mariadb-nc
          mountPath: /var/lib/mysql
        args:
        - --innodb-read-only-compressed=OFF
      - name: redis 
        image: redis
        imagePullPolicy: Always
      volumes:
      - name: nextcloud-data 
        persistentVolumeClaim:
          claimName: nextcloud-data 
      - name: nextcloud-config
        persistentVolumeClaim:
            claimName: nextcloud-config
      - name: nextcloud-apps
        persistentVolumeClaim:
            claimName: nextcloud-apps
      - name: nextcloud-html
        persistentVolumeClaim:
            claimName: nextcloud-html
      - name: mariadb-nc
        persistentVolumeClaim:
            claimName: mariadb-nc
