service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: default
  name: nextcloud
  labels:
    app: nextcloud 
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
  - port: 80
    targetPort: 80
